# rusty-blog

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml
markdowns/: New Text Document.md  my_test_file.md
src/: main.rs
src/api/: mod.rs
src/controllers/: mod.rs
src/db/: mod.rs
src/file_manager/: mod.rs
src/views/: mod.rs
templates/: 404.html.hbs  base.html.hbs  blog_view.html.hbs  cdn_includes.hbs  index.html.hbs
templates/auth/: signin.html.hbs  signup.html.hbs
