[package]
name = "rusty-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
serde = "1.0.204"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]
